--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,15 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 permissions:
   contents: read
   pages: write
   id-token: write
+
+# Environment variables available to all jobs and steps
+env:
+  NODE_ENV: production
 
 concurrency:
   group: "pages"
@@ -19,8 +21,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
+    steps:      - name: Checkout
         uses: actions/checkout@v4
         
       - name: Setup Node
@@ -28,12 +29,25 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          
+
+      # Cache node_modules
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-modules-
+            
       - name: Install dependencies
         run: npm ci
-        
-      - name: Build
+          - name: Build
         run: npm run build
+        env:
+          VITE_BASE_URL: /future-forge
+          NODE_ENV: production
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
